fix: compilation and runtime fixes for sub-project 2
- Fix AiMessage.singleText() → text() for LangChain4j compatibility
- Fix SummaryService: generate(String) returns String directly
- Fix Thread.ofVirtual() → new Thread() for Java 17 compatibility
- Fix FormData upload Content-Type for file uploads
- Fix Start.vue: pass non-empty chiefComplaint for @NotBlank validation

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>